# swordfish

./: README.md  app.html  package.json  pnpm-lock.yaml  script-window.html  settings.html  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.tsx  SearchResult.tsx  Settings.tsx  app-index.tsx  constants.ts  hotkeys.ts  invocations.ts  script-loader-index.ts  settings-index.tsx  store.tsx  styles.css  styles.scss  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: DataSource.rs  app_state.rs  browser_data_source.rs  constants.rs  file_data_source.rs  input_handler.rs  lib.rs  main.rs  query.rs  query_engine.rs  settings.rs  sqlite.rs  tray.rs  utilities.rs  windows.rs
src-tauri/src/browser/: browser.rs  mod.rs
src-tauri/src/browser/history/: mod.rs  static_configs.rs
src-tauri/src/search/: filename.rs
src-tauri/swordfish-types/: Cargo.toml  README.md
src-tauri/swordfish-types/src/: file_type.rs  lib.rs  sf_types.rs
src-tauri/swordfish-utilities/: Cargo.toml
src-tauri/swordfish-utilities/src/: sf_utilities.rs
src/components/: Chat.tsx  Preview.tsx  QueryResultList.tsx  SearchIcon.tsx  Tooltip.tsx
src/feature/action-selector/: ActionSelector.tsx
src/feature/details/: Details.tsx  FileDetails.tsx  ScriptDetails.tsx  scriptDetails.module.scss
src/feature/gui-prompt/: FieldInput.tsx  Form.tsx  types.ts
src/hooks/: useInputHandler.ts
src/react/: QueryInput.tsx  ReactApp.tsx  ResultList.tsx  SearchResult.tsx  reactStore.tsx
src/types/: AppWindowEvent.ts  FileInfo.ts  FileType.ts  Query.ts  QueryMode.ts  QueryResult.ts  QueryResultItem.ts  QueryResultType.ts  ReceivedEvent.ts  ResultDetails.ts  ResultItem.ts  ResultPreview.ts  ResultType.ts  SFEvent.ts  WindowIdent.ts
