[package]
name = "swordfish"
version = "0.0.0"
description = "A Tauri App"
authors = ["Trevor Atlas"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [ "api-all", "system-tray", "global-shortcut", "macos-private-api"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fend-core = "1.4"
dirs = "5.0"
rusqlite = { version = "0.31", features = ["bundled"] }
glob = "0.3"
thiserror = "1.0"
url = "2.5"
toml = "0.8"
rust_search = "2.1.0"
ignore = "0.4.22"
crossbeam-channel = "0.5"
walkdir = "2.5"
num_cpus = "1.16"
dirs-sys = "0.4"
regex = "1.10"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json"] }
tokio = {version = "1.37", features = ["full"] }
plist = "1.6"
bitflags = "2.5"
icns = "0.3.1"

[target."cfg(target_os = \"macos\")".dependencies]
core-graphics = { version = "0.23" }
core-foundation = { version = "0.9" }
cocoa = { version = "0.25" }
objc = { version = "0.2" }
objc_id = { version = "0.1" }
objc-foundation = { version = "0.1" }

[features]
default = ["custom-protocol"]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
