[package]
name = "swordfish"
version = "0.0.0"
description = "A Tauri App"
authors = ["Trevor Atlas <hello@trevoratlas.com>"]
license = ""
repository = "github.com/trevor-atlas/swordfish"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["swordfish-types"]

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
swordfish-types = { path = "./swordfish-types" }
tauri = { version = "1.6", features = [ "api-all", "system-tray", "global-shortcut", "macos-private-api"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fend-core = "1.4"
dirs = "5.0"
rusqlite = { version = "0.31", features = ["bundled"] }
glob = "0.3"
thiserror = "1.0"
url = "2.5"
toml = "0.8"
ignore = "0.4.22"
crossbeam-channel = "0.5"
walkdir = "2.5"
num_cpus = "1.16"
dirs-sys = "0.4"
regex = "1.10"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json"] }
tokio = {version = "1.37", features = ["full"] }
plist = "1.6"
icns = "0.3.1"
zmq = "0.10.0"
rayon = "1.10.0"
globset = "0.4.14"
tracing = "0.1.40"

[features]
default = ["custom-protocol"]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
