[package]
name = "swordfish"
version = "0.0.1"
description = "A Tauri App"
authors = ["Trevor Atlas <hello@trevoratlas.com>"]
license = ""
repository = "github.com/trevor-atlas/swordfish"
edition = "2021"

[lib]
name = "swordfish"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["swordfish-types"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
swordfish-types = { path = "./swordfish-types" }
swordfish-utilities = { path = "./swordfish-utilities" }
tauri = { version = "2", features = [ "protocol-asset",
  "macos-private-api", "tray-icon",
] }
tauri-plugin-http = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
monitor = { git = "https://github.com/ahkohd/tauri-toolkit", branch = "v2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fend-core = "1.5"
dirs = "5.0"
rusqlite = { version = "0.32", features = ["bundled"] }
glob = "0.3"
thiserror = "1.0"
url = "2.5"
toml = "0.8"
ignore = "0.4.22"
crossbeam-channel = "0.5"
walkdir = "2.5"
num_cpus = "1.16"
dirs-sys = "0.4"
regex = "1.10"
chrono = "0.4.38"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.39", features = ["full"] }
plist = "1.7"
icns = "0.3.1"
zmq = "0.10.0"
rayon = "1.10.0"
globset = "0.4.14"
tracing = "0.1.40"
v_htmlescape = "0.15"
fuzzy-matcher = "0.3.7"
time = "0.3.36"
serde_variant = "0.1.3"
axum = "0.7.5"
tower = { version = "0.5", features = ["full"] }
tower-http = "0.5.2"
interprocess = "2.2.1"
objc = "0.2.7"
cocoa = "0.26.0"


[features]
default = ["custom-protocol"]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"

[build]
rustc-wrapper = "/Users/atlas/.local/bin/sccache"
