[package]
name = "swordfish-types"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/sf_types.rs"

[dependencies]
swordfish-utilities = { path = "../swordfish-utilities" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ts-rs = "9.0"
serde_variant = "0.1.3"
