[package]
name = "swordfish-utilities"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/sf_utilities.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
url = "2.5"
glob = "0.3"
dirs-sys = "0.4"
